Bug 361403 - missing sub-compositor support
Summary: missing sub-compositor support
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-05 07:58 UTC by Pascal d'Hermilly
Modified: 2016-04-15 05:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (1.24 MB, image/jpeg)
2016-04-05 09:05 UTC, Pascal d'Hermilly
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2016-04-05 07:58:07 UTC
When I click 'Energy information' in Kinfocenter the panel with information is rendered outside the window. specifically kinfocenter was snapped to the right side of the screen but the 'energy infomation' panel and the 'File indexer monitor' is rendered just to the left of the window - actually also rendered other places outside the window, a bit random.
The other panels in kinfocenter seems to render the right place.

Im running latest kde neon plasma wayland live image.
plasma 5.6.90
frameworks 5.21.0
qt> 5.5.1
kernel 4.2.0-34
kwin 5.6.90
intel graphics i5-4250u

Reproducible: Always
Comment 1 Martin Flöser 2016-04-05 08:50:54 UTC
could you please add a screenshot?
Comment 2 Pascal d'Hermilly 2016-04-05 09:05:21 UTC
Created attachment 98252 [details]
screenshot
Comment 3 Martin Flöser 2016-04-05 09:12:19 UTC
not a kwin bug, looks like kinfocenter creates multiple windows
Comment 4 Martin Flöser 2016-04-05 09:15:38 UTC
oh sorry, it says Wayland. Yeah well KWin doesn't support subsurface yet. Will be fixed with https://phabricator.kde.org/D1282
Comment 5 Martin Flöser 2016-04-07 06:15:19 UTC
Git commit 8d851a0252c1a384fe5665c74e242d9fdf4a7425 by Martin Gräßlin.
Committed on 07/04/2016 at 05:59.
Pushed by graesslin into branch 'master'.

Announce support for subcompositor protocol

Reviewers: #plasma

Subscribers: plasma-devel

Projects: #plasma

Differential Revision: https://phabricator.kde.org/D1282

M  +3    -0    wayland_server.cpp

http://commits.kde.org/kwin/8d851a0252c1a384fe5665c74e242d9fdf4a7425