wayland_server.cpp
@@ -44,6 +44,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include <KWayland/Server/seat_interface.h>
 #include <KWayland/Server/server_decoration_interface.h>
 #include <KWayland/Server/shadow_interface.h>
+#include <KWayland/Server/subcompositor_interface.h>
 #include <KWayland/Server/blur_interface.h>
 #include <KWayland/Server/shell_interface.h>
 #include <KWayland/Server/outputmanagement_interface.h>
@@ -239,6 +240,8 @@ void WaylandServer::init(const QByteArray &socketName, InitalizationFlags flags)
             this, [this](KWayland::Server::OutputConfigurationInterface *config) {
                 m_backend->configurationChangeRequested(config);
     });
+
+    m_display->createSubCompositor(m_display)->create();
 }
 
 void WaylandServer::initWorkspace()
